// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dark tone class + light theme class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
      "padding": "20px",
    }
  }
>
  <_class
    content={
      Array [
        Object {
          "label": "One",
          "value": "One",
        },
        Object {
          "defaultChecked": true,
          "label": "Two",
          "value": "Two",
        },
      ]
    }
    name="test-dark-tone-light-class"
  />
</div>
`;

exports[`Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "20px",
    }
  }
>
  <_class
    content={
      Array [
        Object {
          "label": "One",
          "value": "One",
        },
        Object {
          "defaultChecked": true,
          "label": "Two",
          "value": "Two",
        },
      ]
    }
    name="test-dark-tone-light"
  />
</div>
`;

exports[`No options - RadioButton 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  type="radio"
  value="1"
/>
`;

exports[`No options - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
/>
`;

exports[`Option: after - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
  <div>
    After
  </div>
</div>
`;

exports[`Option: before - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
  <div>
    Before
  </div>
</div>
`;

exports[`Option: buttons - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    name="label"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    name="label"
    onChange={[Function]}
    value="Two"
  />
</div>
`;

exports[`Option: class - RadioButton 1`] = `
<SelectionControl
  className="class-x"
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  type="radio"
  value="1"
/>
`;

exports[`Option: class - RadioGroup 1`] = `
<div
  className="pe-radio-group   class-x"
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
</div>
`;

exports[`Option: className - RadioButton 1`] = `
<SelectionControl
  className="className-x"
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  type="radio"
  value="1"
/>
`;

exports[`Option: className - RadioGroup 1`] = `
<div
  className="pe-radio-group   className-x"
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
</div>
`;

exports[`Option: defaultChecked 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "defaultChecked": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="defaultChecked"
/>
`;

exports[`Option: disabled -- dark tone 1`] = `
<RadioGroup
  all={
    Object {
      "disabled": true,
    }
  }
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "checked": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="disabled-dark"
/>
`;

exports[`Option: disabled 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "disabled": true,
        "label": "One",
        "value": "One",
      },
      Object {
        "checked": true,
        "disabled": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="disabled"
/>
`;

exports[`Option: element - RadioButton 1`] = `
<SelectionControl
  element="a"
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  type="radio"
  value="1"
/>
`;

exports[`Option: element - RadioGroup 1`] = `
<a
  className="pe-radio-group   "
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
</a>
`;

exports[`Option: iconButton (custom hover behaviour) 1`] = `
<RadioGroup
  all={
    Object {
      "iconButton": Object {
        "ink": false,
        "wash": true,
      },
      "label": "Hover me",
    }
  }
  className="multiple"
  content={
    Array [
      Object {
        "value": "One",
      },
      Object {
        "value": "Two",
      },
    ]
  }
  name="iconButton"
/>
`;

exports[`Option: iconOn, iconOff (custom icon) 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "iconOff": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24.00 24.00\\" enable-background=\\"new 0 0 24.00 24.00\\" xml:space=\\"preserve\\"><path fill=\\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\" stroke-linejoin=\\"round\\" d=\\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \\"/></svg>",
                }
              }
            />,
          },
        },
        "iconOn": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/></svg>",
                }
              }
            />,
          },
        },
        "size": "small",
        "value": "small",
      },
      Object {
        "iconOff": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24.00 24.00\\" enable-background=\\"new 0 0 24.00 24.00\\" xml:space=\\"preserve\\"><path fill=\\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\" stroke-linejoin=\\"round\\" d=\\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \\"/></svg>",
                }
              }
            />,
          },
        },
        "iconOn": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/></svg>",
                }
              }
            />,
          },
        },
        "size": "regular",
        "value": "regular",
      },
      Object {
        "iconOff": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24.00 24.00\\" enable-background=\\"new 0 0 24.00 24.00\\" xml:space=\\"preserve\\"><path fill=\\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\" stroke-linejoin=\\"round\\" d=\\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \\"/></svg>",
                }
              }
            />,
          },
        },
        "iconOn": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/></svg>",
                }
              }
            />,
          },
        },
        "size": "medium",
        "value": "medium",
      },
      Object {
        "iconOff": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24.00 24.00\\" enable-background=\\"new 0 0 24.00 24.00\\" xml:space=\\"preserve\\"><path fill=\\"#000000\\" fill-opacity=\\"1\\" stroke-width=\\"0.2\\" stroke-linejoin=\\"round\\" d=\\"M 11.9994,15.3943L 8.2364,17.6643L 9.2314,13.3833L 5.9094,10.5053L 10.2894,10.1293L 11.9994,6.09327L 13.7094,10.1293L 18.0894,10.5053L 14.7674,13.3833L 15.7624,17.6643M 21.9994,9.24227L 14.8084,8.62526L 11.9994,1.99827L 9.1904,8.62526L 1.9994,9.24227L 7.4544,13.9693L 5.8194,20.9983L 11.9994,17.2703L 18.1794,20.9983L 16.5444,13.9693L 21.9994,9.24227 Z \\"/></svg>",
                }
              }
            />,
          },
        },
        "iconOn": Object {
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/></svg>",
                }
              }
            />,
          },
        },
        "size": "large",
        "value": "large",
      },
    ]
  }
  name="icon"
/>
`;

exports[`Option: id - RadioButton 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  id="id-x"
  instanceClass="pe-radio-control"
  selectable={[Function]}
  type="radio"
  value="1"
/>
`;

exports[`Option: id - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
  id="id-x"
>
  <RadioButton
    checked={false}
    key="One"
    label="One"
    onChange={[Function]}
    value="One"
  />
  <RadioButton
    checked={false}
    key="Two"
    label="Two"
    onChange={[Function]}
    value="Two"
  />
</div>
`;

exports[`Option: label (JSX) 1`] = `
<RadioGroup
  buttons={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  className="multiple"
/>
`;

exports[`Option: label (RTL) 1`] = `
<div
  className="pe-rtl"
>
  <_class
    content={
      Array [
        Object {
          "label": "واحد",
          "value": "One",
        },
        Object {
          "label": "اثنان",
          "value": "Two",
        },
      ]
    }
    name="label"
  />
</div>
`;

exports[`Option: label -- dark tone 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="label-dark"
/>
`;

exports[`Option: label 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="label"
/>
`;

exports[`Option: selectable 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "label": "Never",
        "selectable": [Function],
        "value": "One",
      },
      Object {
        "label": "Only when unchecked",
        "selectable": [Function],
        "value": "Two",
      },
    ]
  }
  name="selectable"
/>
`;

exports[`Option: size 1`] = `
<RadioGroup
  className="multiple"
  content={
    Array [
      Object {
        "label": "small",
        "size": "small",
        "value": "small",
      },
      Object {
        "label": "regular",
        "size": "regular",
        "value": "regular",
      },
      Object {
        "label": "medium",
        "size": "medium",
        "value": "medium",
      },
      Object {
        "label": "large",
        "size": "large",
        "value": "large",
      },
    ]
  }
  name="size"
/>
`;

exports[`Option: style (colors) 1`] = `
<RadioGroup
  all={
    Object {
      "style": Object {
        "color": "#EF6C00",
      },
    }
  }
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "defaultChecked": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="style"
/>
`;

exports[`Option: style - RadioGroup 1`] = `
<div
  className="pe-radio-group   "
  style={
    Object {
      "buttons": Array [
        Object {
          "label": "One",
          "value": "One",
        },
        Object {
          "label": "Two",
          "value": "Two",
        },
      ],
      "color": "red",
    }
  }
/>
`;

exports[`Option: tabindex - RadioButton 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  selectable={[Function]}
  tabIndex={3}
  type="radio"
  value="1"
/>
`;

exports[`Option: value - RadioButton 1`] = `
<SelectionControl
  icons={
    Object {
      "iconOff": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
      "iconOn": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/></svg>",
    }
  }
  instanceClass="pe-radio-control"
  name="worth"
  selectable={[Function]}
  type="radio"
  value="notable"
/>
`;

exports[`RadioButtons onChange (JSX) 1`] = `
<form>
  <div
    style={
      Object {
        "margin": "0 0 1rem 0",
      }
    }
  >
    Value: undefined
  </div>
  <div
    className="multiple"
  >
    <RadioButton
      checked={false}
      label="One"
      onChange={[Function]}
      value="one"
    />
    <RadioButton
      checked={false}
      label="Two"
      onChange={[Function]}
      value="two"
    />
  </div>
</form>
`;

exports[`RadioGroup onChange (JSX) 1`] = `
<div>
  <div
    style={
      Object {
        "margin": "0 0 1rem 0",
      }
    }
  >
    Value: null
  </div>
  <RadioGroup
    className="multiple"
    content={
      Array [
        Object {
          "label": "One",
          "value": "One",
        },
        Object {
          "label": "Two",
          "value": "Two",
        },
      ]
    }
    name="onChange"
    onChange={[Function]}
  />
</div>
`;

exports[`Themed radio button (color and font size) -- dark tone 1`] = `
<RadioGroup
  all={
    Object {
      "className": "tests-radio-button-themed-radio",
    }
  }
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "defaultChecked": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="themed-dark"
/>
`;

exports[`Themed radio button (color and font size) 1`] = `
<RadioGroup
  all={
    Object {
      "className": "tests-radio-button-themed-radio",
    }
  }
  className="multiple"
  content={
    Array [
      Object {
        "label": "One",
        "value": "One",
      },
      Object {
        "defaultChecked": true,
        "label": "Two",
        "value": "Two",
      },
    ]
  }
  name="themed"
/>
`;
